src/objects/SFDC_Strategy__c.object
<CustomObject>
    <description>Specific set of strategies tied to each account that the sales manager needs to executive.  Each strategy lists specific revenue goals and products to be sold to a particular division or department.  Tasks and milestones are also attached to each strategy.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N60000001PRPGEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actions_to_minimize_challenges__c</fullName>
        <label>Actions to minimize challenges</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Problem_Addressed__c</fullName>
        <label>Business Problem Addressed</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_strength_and_weakness__c</fullName>
        <label>Competitor (incl. strength and weakness)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Short description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Est_Comp_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Product_Revenue__c</fullName>
        <label>Estimated Product Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Service_Revenue__c</fullName>
        <label>Estimated Service Revenue</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Revenue__c</fullName>
        <formula>Estimated_Product_Revenue__c  +  Estimated_Service_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Total Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Influencers__c</fullName>
        <label>Decision makers / Influencers</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_and_external_relationships__c</fullName>
        <label>Internal and external conditions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N60000001PRP6EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Acct_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>R00N60000001PRPWEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_area__c</fullName>
        <formula>CASE(text(Owner:User.Sales_Area1__c), &quot;1000&quot;, &quot;PDK BE&quot;, &quot;4000&quot;, &quot;PDK LO&quot;,&quot;F091&quot;, &quot;ME SE&quot;,&quot;F063&quot;, &quot;LO FI DPD&quot;,&quot;F367&quot;, &quot;LO FI&quot;,&quot;F092&quot;, &quot;LO SE&quot;, &quot;0540&quot;, &quot;LO DK&quot;, &quot;No sales area&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Goal__c</fullName>
        <label>Solution / Goal</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Won - Achieved Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won - Partial Achieved Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost - No Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Threats_and_possibilities__c</fullName>
        <label>Threats and possibilities</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_new_revenue__c</fullName>
        <label>Value (new revenue)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Acct_Plan__c</columns>
        <columns>Strategy_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Sales Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sales_Projects</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>SFDC_Acct_Plan__c</columns>
        <columns>Strategy_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Strategy_Status__c</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <label>My Sales Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>